--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,14 @@
+/* Basic App Styling */
 .App {
   text-align: center;
+  background-color: #282c34;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-size: calc(10px + 2vmin);
+  color: white;
 }
 
 .App-logo {
@@ -35,4 +44,14 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+/* Compontent: Display */
+.snippet-display {
+  background-color: #f4f4f4;
+  border: 1px solid #ccc;
+  padding: 10px;
+  margin: 20px 0;
+  font-family: 'Courier New', Courier, monospace;
+  white-space: pre-wrap;
 }
